--- a/locale/fi_FI/emails.po
+++ b/locale/fi_FI/emails.po
@@ -114,10 +114,10 @@ msgstr ""
 "Ystävällisin terveisin,<br />\n"
 "{$signature}"
 
-msgid "emails.submissionAckNotUser.subject"
+msgid "emails.submissionAckNotAuthor.subject"
 msgstr "Käsikirjoitus vastaanotettu"
 
-msgid "emails.submissionAckNotUser.body"
+msgid "emails.submissionAckNotAuthor.body"
 msgstr ""
 "Hei,<br />\n"
 "<br />\n"
@@ -417,12 +417,6 @@ msgstr ""
 "<br />\n"
 "\t\t"
 
-msgid "emails.notificationCenterDefault.subject"
-msgstr "Viesti julkaisijaa {$contextName} koskien"
-
-msgid "emails.notificationCenterDefault.body"
-msgstr "Kirjoita viesti."
-
 msgid "emails.announcement.body"
 msgstr ""
 "<b>{$announcementTitle}</b><br />\n"
@@ -458,11 +452,6 @@ msgstr ""
 msgid "emails.statisticsReportNotification.subject"
 msgstr "Toimitustyötä koskeva raportti {$month}/{$year}"
 
-msgid "emails.notificationCenterDefault.description"
-msgstr ""
-"The default (blank) message used in the Notification Center Message "
-"Listbuilder."
-
 msgid "emails.notifyFile.description"
 msgstr "A notification from a user sent from a file information center modal"
 
@@ -476,17 +465,6 @@ msgstr ""
 "send information about a monograph to somebody who may be interested. It is "
 "available via the Reading Tools and must be enabled by the Press Manager in "
 "the Reading Tools Administration page."
-
-msgid "emails.indexComplete.description"
-msgstr ""
-"This email from the Indexer to the Series Editor notifies them that the "
-"index creation process has been completed."
-
-msgid "emails.indexRequest.description"
-msgstr ""
-"This email from the Series Editor to the Indexer notifies them that they "
-"have been assigned the task of creating indexes for a submission. It "
-"provides information about the submission and how to access it."
 
 msgid "emails.reviewReinstate.body"
 msgstr ""
