--- a/locale/pl_PL/emails.po
+++ b/locale/pl_PL/emails.po
@@ -53,7 +53,7 @@ msgstr ""
 "<br />\n"
 "Dziękujemy,"
 
-msgid "emails.submissionAckNotUser.subject"
+msgid "emails.submissionAckNotAuthor.subject"
 msgstr "Potwierdzenie zgłoszenia"
 
 msgid "emails.reviewerRegister.subject"
@@ -162,9 +162,6 @@ msgstr "Zdolny do recenzji"
 msgid "emails.reviewReinstate.subject"
 msgstr "Ponowienie prośby o recenzję"
 
-msgid "emails.notificationCenterDefault.body"
-msgstr "Proszę, wprowadź treść swojej wiadomości."
-
 msgid "emails.emailLink.description"
 msgstr ""
 "Ten email dostarcza zarejestrowanemu czytelnikowi możliwość wysłania "
@@ -216,11 +213,6 @@ msgstr ""
 
 msgid "emails.statisticsReportNotification.subject"
 msgstr "Zadanie redakcyjne dla {$month}, {$year}"
-
-msgid "emails.notificationCenterDefault.description"
-msgstr ""
-"Domyślna (pusta) wiadomość użyta w Listbuilder Centrum Wiadomości "
-"Powiadomień."
 
 msgid "emails.emailLink.subject"
 msgstr "Manuskrypt, który może Cię zainteresować"
@@ -322,7 +314,7 @@ msgstr ""
 "Z poważaniem,<br />\n"
 "{$signature}<br />\n"
 
-msgid "emails.submissionAckNotUser.body"
+msgid "emails.submissionAckNotAuthor.body"
 msgstr ""
 "Witaj,<br />\n"
 "<br />\n"
@@ -370,9 +362,6 @@ msgstr ""
 msgid "emails.announcement.subject"
 msgstr "{$announcementTitle}"
 
-msgid "emails.notificationCenterDefault.subject"
-msgstr "Wiadomość dotycząca {$contextName}"
-
 msgid "emails.notifyFile.description"
 msgstr ""
 "Powiadomienie od użytkownika wysłane z modalnego centrum informacji o pliku"
@@ -412,11 +401,6 @@ msgstr ""
 "{$authors} opublikowanym w tomie:  {$volume}, numer {$number} ({$year}) z "
 "{$contextName} w: &quot;{$submissionUrl}&quot;."
 
-msgid "emails.indexComplete.description"
-msgstr ""
-"Ten email jest wysłany od indeksującego do redaktora serii, aby powiadomić, "
-"że ukończono proces tworzenia indeksu."
-
 msgid "emails.indexComplete.body"
 msgstr ""
 "{$recipientName}:<br />\n"
@@ -427,12 +411,6 @@ msgstr ""
 "W razie pytań skontaktuj się ze mną. <br />\n"
 "<br />\n"
 "{$signatureFullName}"
-
-msgid "emails.indexRequest.description"
-msgstr ""
-"Ten email jest wysłany od Redaktora serii do indeksującego, aby powiadomić, "
-"że został przydzielony do zrobienia indeksu dla zgłoszenia. Dostarcza "
-"informacje o zgłoszeniu i dostępie do niego."
 
 msgid "emails.indexRequest.subject"
 msgstr "Prośba o indeks"
