--- a/locale/sl_SI/emails.po
+++ b/locale/sl_SI/emails.po
@@ -51,10 +51,10 @@ msgstr "Registracija za recenzenta pri {$contextName}"
 msgid "emails.reviewerRegister.body"
 msgstr "Glede na vaše področje delovanja, smo si dovolili registrirati vaše ime v bazo recenzentov za publikacijo {$contextName}. To ne pomeni nobene obveze z vaše strani in nam le omogoča, da vas lahko povabimo k recenziji prispevkov. Ko boste povabljeni k recenziji, boste lahko videli naslov in povzetek prispevka in se boste lahko odločili, ali boste pri recenziji sodelovali ali ne. Kadar koli lahko zahtevate, da vas odstranimo iz seznama recenzentov.<br /> <br /> Pošiljamo vam uporabniško ime in geslo, ki ju potrebujete za vso interakcijo z založbo preko spleta. Če želite lahko posodobite vaš račun, vključno z recenzentskimi interesi.<br /> <br />Uporabniško ime: {$recipientUsername}<br /> Geslo: {$password}<br /> <br />Hvala,<br /> {$signature}"
 
-msgid "emails.submissionAckNotUser.subject"
+msgid "emails.submissionAckNotAuthor.subject"
 msgstr "Potrditev oddaje prispevka"
 
-msgid "emails.submissionAckNotUser.body"
+msgid "emails.submissionAckNotAuthor.body"
 msgstr "Pozdravljeni, <br /> <br /> {$submitterName} je predložil_a rokopis &quot;{$submissionTitle}&quot; za {$contextName}. Če imate kakršno koli vprašanje, se, prosim, obrnite name. {$signature} Hvala, da ste se odločili za našo založbo.<br /> <br /> {$contextSignature}"
 
 msgid "emails.submissionUnsuitable.subject"
@@ -147,17 +147,11 @@ msgstr "Zahteva za kazalo"
 msgid "emails.indexRequest.body"
 msgstr "{$recipientName}:<br /> <br /> Prispevek &quot;{$submissionTitle}&quot; za {$contextName} potrebuje kazalo, ki se ga ustvari po naslednjih korakih.<br /> 1. Kliknite na URL povezavo do prispevka spodaj.<br /> 2. Prijavite se v založbo in uporabite datoteko Page Proofs, da pripravite prelom skladno s standardi založbe.<br /> 3. Uredniku pošljite e-poštno sporočilo Zaključeno.<br /> <br /> {$contextName} URL: <a href=\"{$contextUrl}\">{$contextUrl}</a><br /> Povezava URL do prispevka: <a href=\"{$submissionUrl}\">{$submissionUrl}</a><br /> Uporabniško ime: {$recipientUsername}<br /> <br /> Če v tem trenutku dela ne morete opraviti ali imate kakšno vprašanje, se prosim obrnite name. Hvala za vaš prispevek založbi.<br /> <br /> {$signature}"
 
-msgid "emails.indexRequest.description"
-msgstr "To e-poštno sporočilo od urednika zbirke obvešča klasifikatorja, da mu je bil dodeljen prispevek, ki potrebuje kazala. Vsebuje informacije o prispevku in o tem, kako je možno dostopati do prispevka. "
-
 msgid "emails.indexComplete.subject"
 msgstr "Prelomi kazala končani"
 
 msgid "emails.indexComplete.body"
 msgstr "{$recipientName}:<br /> <br />Kazala za rokopis, &quot;{$submissionTitle},&quot, za {$contextName} so pripravljena in so na voljo za korekturo. <br /> <br />Če imate kakršno koli vprašanje, se prosim obrnite name.<br /> <br /> {$signatureFullName}"
-
-msgid "emails.indexComplete.description"
-msgstr "To e-poštno sporočilo od klasifikatorja obvešča urednika zbirke, da je zaključil proces ustvarjanja kazal."
 
 msgid "emails.emailLink.subject"
 msgstr "Rokopis, ki bi vas morda zanimal"
@@ -189,12 +183,3 @@ msgstr ""
 
 msgid "emails.notifyFile.description"
 msgstr "Obvestilo uporabnika, poslano iz modula informacijskega centra za datoteke."
-
-msgid "emails.notificationCenterDefault.subject"
-msgstr "Sporočilo o {$contextName}"
-
-msgid "emails.notificationCenterDefault.body"
-msgstr "Prosimo, vnesite vaše sporočilo."
-
-msgid "emails.notificationCenterDefault.description"
-msgstr "Privzeto (prazno) sporočilo, uporabljeno v seznamu sporočilnega centra za obvestila."
