--- a/locale/nb_NO/emails.po
+++ b/locale/nb_NO/emails.po
@@ -46,17 +46,6 @@ msgstr ""
 msgid "emails.statisticsReportNotification.subject"
 msgstr "Redaksjonel aktivitet for {$month}, {$year}"
 
-msgid "emails.notificationCenterDefault.description"
-msgstr ""
-"Standardmeldingen (blank) som brukes i Notification Center Message "
-"Listbuilder."
-
-msgid "emails.notificationCenterDefault.body"
-msgstr "Skriv inn meldingen din."
-
-msgid "emails.notificationCenterDefault.subject"
-msgstr "Melding vedrørende {$contextName}"
-
 msgid "emails.notifyFile.description"
 msgstr "En melding fra en bruker sendt fra en filinformasjonssentral modal"
 
@@ -106,11 +95,6 @@ msgstr ""
 msgid "emails.emailLink.subject"
 msgstr "Utgivelse som kan være av interesse for deg"
 
-msgid "emails.indexComplete.description"
-msgstr ""
-"Denne e-posten fra indeksøren til serieredaktør informerer om indeks er "
-"ferdiggjort."
-
 msgid "emails.indexComplete.body"
 msgstr ""
 "{$recipientName}:<br />\n"
@@ -125,12 +109,6 @@ msgstr ""
 
 msgid "emails.indexComplete.subject"
 msgstr "Indeksering fullført"
-
-msgid "emails.indexRequest.description"
-msgstr ""
-"Denne e-posten fra serieredaktøren til indeksøren informerer om at "
-"vedkommende har fått i oppgave å lage indekser for innleveringen. Den gir "
-"informasjon om innleveringen og hvordan man får tilgang til den."
 
 msgid "emails.indexRequest.body"
 msgstr ""
@@ -381,7 +359,7 @@ msgstr ""
 msgid "emails.editorAssign.subject"
 msgstr "Redaksjonelt oppdrag"
 
-msgid "emails.submissionAckNotUser.body"
+msgid "emails.submissionAckNotAuthor.body"
 msgstr ""
 "Hei<br />\n"
 "<br />\n"
@@ -393,7 +371,7 @@ msgstr ""
 "<br />\n"
 "{$contextSignature}"
 
-msgid "emails.submissionAckNotUser.subject"
+msgid "emails.submissionAckNotAuthor.subject"
 msgstr "Innleveringsbekreftelse"
 
 msgid "emails.reviewerRegister.body"
