--- a/locale/en_US/manager.po
+++ b/locale/en_US/manager.po
@@ -1409,9 +1409,7 @@ msgid "mailable.indexComplete.name"
 msgstr "Index Completed"
 
 msgid "mailable.publicationVersionNotify.name"
-msgstr "Publication Version Notification"
+msgstr "New Version Created"
 
 msgid "mailable.publicationVersionNotify.description"
-msgstr ""
-"This email automatically notifies assigned editors about new version of the "
-"publication"
+msgstr "This email automatically notifies the assigned editors when a new version of the submission has been created."
