--- a/locale/en_US/submission.po
+++ b/locale/en_US/submission.po
@@ -530,6 +530,9 @@ msgstr "You are not allowed to submit to this press because authors must be regi
 msgid "submission.wizard.noSectionAllowed.description"
 msgstr "You are not allowed to submit to this press because submissions to all sections of this press have been deactivated or restricted. If you believe this is an error, please contact <a href='mailto:{$email}'>{$name}</a>."
 
+msgid "submission.wizard.sectionClosed.message"
+msgstr "{$contextName} is not accepting submissions to the {$section} series. If you need help recovering your submission, please contact <a href='mailto:{$email}'>{$name}</a>."
+
 msgid "submission.sectionNotFound"
 msgstr "The series for this submission could not be found."
 
